--- a/app/views/entry/entryContent.html
+++ b/app/views/entry/entryContent.html
@@ -1,5 +1,5 @@
 <span>
-<h1 id="contentTitle">{{entry.Title}}</h1>
+<h1 id="contentTitle">{{entry.title}}</h1>
 <div class="panel panel-default">
     <div id="{{index}}HtmlExample" class="panel-body">
         <div ng-include="path"></div>
