--- a/app/views/tabs/tabsCategories.html
+++ b/app/views/tabs/tabsCategories.html
@@ -1,3 +1,3 @@
 <li role="presentation">
-    <a href="#" aria-controls="home" role="tab" data-target="{{index}}" data-toggle="tab" ng-click='onTabSelected();'>{{title}}</a>
+    <a href="#/content" role="tab" data-target="{{index+1}}" data-toggle="tab" ng-click='onTabSelected();'>{{title}}</a>
 </li>
