--- a/app/views/breadcrumb/breadcrumbContent.html
+++ b/app/views/breadcrumb/breadcrumbContent.html
@@ -1,5 +1,5 @@
 <ol class="breadcrumb">
-    <li><a href="#">{{categorySelected}}</a></li>
-    <li><a href="#">{{entrySelected}}</a></li>
-    <li><a href="#">{{tabSelected}}</a></li>
+    <li><a href="#/content">{{categorySelected}}</a></li>
+    <li><a href="#/content">{{entrySelected}}</a></li>
+    <li><a href="#/content">{{tabSelected}}</a></li>
 </ol>
