--- a/app/views/content.html
+++ b/app/views/content.html
@@ -1,30 +1,32 @@
-<div id="ilContent" class="container">
-    <!-- Breadcrumb Section ================================================== -->
-    <breadcrumb-content
-            category-selected="{{categorySelected.title}}"
-            entry-selected="{{subCategorySelected.title}}"
-            tab-selected="{{tabSelected.title}}">
-    </breadcrumb-content>
+<span>
+    <div id="ilContent" class="container">
+        <!-- Breadcrumb Section ================================================== -->
+        <breadcrumb-content
+                category-selected="{{categorySelected.title}}"
+                entry-selected="{{subCategorySelected.title}}"
+                tab-selected="{{tabSelected.title}}">
+        </breadcrumb-content>
 
-    <!-- Title Section ================================================== -->
-    <title-content
-            title="{{subCategorySelected.title}}">
-    </title-content>
+        <!-- Title Section ================================================== -->
+        <title-content
+                title="{{subCategorySelected.title}}">
+        </title-content>
 
 
-    <!-- Tabs Section ================================================== -->
-    <tabs-content>
-        <tabs-categories ng-repeat="(index,itemGroup) in subCategorySelected.itemGroups"
-                         title="{{itemGroup.title}}"
-                         index="{{index}}"
-                         on-tab-selected="onTabSelected(index)">
-        </tabs-categories>
-    </tabs-content>
+        <!-- Tabs Section ================================================== -->
+        <tabs-content>
+            <tabs-categories ng-repeat="(index,itemGroup) in subCategorySelected.itemGroups"
+                             title="{{itemGroup.title}}"
+                             index="{{index}}"
+                             on-tab-selected="onTabSelected(index)">
+            </tabs-categories>
+        </tabs-content>
 
-    <!-- Entry Section ================================================== -->
-    <entry-content ng-repeat="(index,entry) in tabSelected.items"
-                   entry="entry"
-                   index="{{index}}"
-                   tab-path="{{tabSelected.path}}">
-    </entry-content>
-</div>
+        <!-- Entry Section ================================================== -->
+        <entry-content ng-repeat="(index,entry) in tabSelected.items"
+                       entry="entry"
+                       index="{{index}}"
+                       tab-path="{{tabSelected.path}}">
+        </entry-content>
+    </div>
+</span>
