--- a/app/views/tabs/tabsCategories.html
+++ b/app/views/tabs/tabsCategories.html
@@ -1,3 +1,3 @@
-<li role="presentation">
+<li role="presentation" ng-class="active">
     <a href="#/content" role="tab" data-target="{{index+1}}" data-toggle="tab" ng-click='onTabSelected();'>{{title}}</a>
 </li>
