Enabled back and forward via browser button through improved routing

--- a/app/views/breadcrumb/breadcrumbContent.html
+++ b/app/views/breadcrumb/breadcrumbContent.html
@@ -1,5 +1,5 @@
 <ol class="breadcrumb">
-    <li><a href="#/content">{{categorySelected}}</a></li>
-    <li><a href="#/content">{{entrySelected}}</a></li>
-    <li><a href="#/content">{{tabSelected}}</a></li>
+    <li><a href="#/content/{{categoryIndex}}">{{categorySelected}}</a></li>
+    <li><a href="#/content/{{categoryIndex}}/{{subCategoryIndex}}">{{entrySelected}}</a></li>
+    <li><a href="#/content/{{categoryIndex}}/{{subCategoryIndex}}/{{tabIndex}}">{{tabSelected}}</a></li>
 </ol>
