--- a/app/views/dropdown/dropdownCategories.html
+++ b/app/views/dropdown/dropdownCategories.html
@@ -1,4 +1,4 @@
-<li class='dropdown'>
+<li class='dropdown {{active}}'>
     <a href='' class='dropdown-toggle' data-toggle='dropdown'>{{title}}<b class='caret'></b></a>
     <ul id="{{title}}_list" class='dropdown-menu' ng-transclude></ul>
 </li>
