--- a/app/views/dropdown/dropdownEntry.html
+++ b/app/views/dropdown/dropdownEntry.html
@@ -1,3 +1,3 @@
-<li>
-    <a href='#/content' data-target="" aria-controls='{{index}}' role='tab'  ng-click='onDropdownEntrySelected();'>{{title}}</a>
+<li class="{{active}}">
+    <a  href='#/content/{{categoryIndex}}/{{index}}' data-target="" aria-controls='{{index}}' role='tab'  ng-click='onDropdownEntrySelected();'>{{title}}</a>
 </li>
