--- a/app/views/header.html
+++ b/app/views/header.html
@@ -13,7 +13,7 @@
             </div>
             <div id="navbar" class="navbar-collapse collapse">
                 <form class="navbar-form navbar-right">
-                    <!--<a type="submit" href="/libs/live-less-theme-customizer/dist/customizer.html" class="btn btn-info">Customize</a>-->
+                    <a type="submit" href="/libs/live-less-theme-customizer/dist/customizer.html" class="btn btn-info">Customize</a>grunt
                 </form>
             </div><!--/.navbar-collapse -->
         </div>
