--- a/app/views/header.html
+++ b/app/views/header.html
@@ -12,7 +12,9 @@
                 <a class="navbar-brand" href="#/index.html">UI-Kitchen-Sink</a>
             </div>
             <div id="navbar" class="navbar-collapse collapse">
+
                 <form class="navbar-form navbar-right">
+                    <search></search>
                     <a type="submit" href="/libs/live-less-theme-customizer/dist/customizer.html" class="btn btn-info">Customize</a>grunt
                 </form>
             </div><!--/.navbar-collapse -->
