--- a/app/views/header.html
+++ b/app/views/header.html
@@ -15,7 +15,7 @@
 
                 <form class="navbar-form navbar-right">
                     <search></search>
-                    <a type="submit" href="/libs/live-less-theme-customizer/dist/customizer.html" class="btn btn-info">Customize</a>grunt
+                    <a type="submit" href="/libs/live-less-theme-customizer/dist/customizer.html" class="btn btn-info">Customize</a>
                 </form>
             </div><!--/.navbar-collapse -->
         </div>
