--- a/app/views/search/search.html
+++ b/app/views/search/search.html
@@ -1,16 +1,13 @@
 <div class="form-group">
-    <div class="input-group select2-bootstrap-prepend">
-				<span class="input-group-addon">
-					<input type="checkbox" checked>
-				</span>
-        <select id="select2-single-append" class="form-control select2-allow-clear">
+    <div class="input-group select2-bootstrap-append">
+        <select id="select2-single-append" class="form-control select2-allow-clear select2-append">
             <option></option>
             <optgroup label="Alaskan/Hawaiian Time Zone">
-                <option value="AK">Alaska</option>
+                <option value="AK" off="testing test">Alaska</option>
                 <option value="HI">Hawaii</option>
             </optgroup>
             <optgroup label="Pacific Time Zone">
-                <option value="CA">California</option>
+                <option value="CA"><b>Blold</b> California</option>
                 <option value="NV">Nevada</option>
                 <option value="OR">Oregon</option>
                 <option value="WA">Washington</option>
