--- a/app/less/MainMenu.less
+++ b/app/less/MainMenu.less
@@ -1,13 +1,7 @@
-
-
-
-.il-top-bar{
-  height: @il-top-bar-height;
-  min-height: @il-top-bar-height;
-  background-color: @il-top-bar-background-color;
-}
-
 .il-main-header{
-  margin-top: @il-top-bar-height;
-  height: @il-top-header-height;
+  margin-top: @navbar-height;
+}
+.il-navbar-logo{
+  float: left;
+  margin-right: 15px;
 }
