--- a/app/views/content.html
+++ b/app/views/content.html
@@ -1,5 +1,5 @@
 <span>
-    <div id="ilContent" class="container">
+    <div class="row il-content">
         <!-- Breadcrumb Section ================================================== -->
         <breadcrumb-content
                 category-selected="{{categorySelected.title}}"
