--- a/app/views/home.html
+++ b/app/views/home.html
@@ -1,4 +1,4 @@
-<div id="ilContent" class="container">
+<div class="il-content">
     <h3>About the Kitchen Sink</h3>
     <p>The UI-Kitchen-Sinks represents the specification, classification, documentation and illustration of UI-Elements in ILIAS.
     It should help:
