--- a/app/views/dropdown/dropdownContent.html
+++ b/app/views/dropdown/dropdownContent.html
@@ -1,4 +1,4 @@
-<nav class="il-main-menu-entries navbar navbar-default">
+<nav class="il-main-header navbar navbar-default navbar-fixed-top">
     <div class="container-fluid">
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header">
@@ -16,5 +16,5 @@
 
             </ul>
         </div><!-- /.navbar-collapse -->
-    </div><!-- /.container-fluid -->
+    </div>
 </nav>
