--- a/app/views/footer.html
+++ b/app/views/footer.html
@@ -1,10 +1,3 @@
-<div id="ilFooter" class="container">
-    <hr>
-    <div class="row">
-        <div class="col-md-6">
-            <p>&copy; UI-Kitchen-Sink</p>
-        </div>
-        <div class="col-md-6">
-        </div>
-    </div>
+<div class="il-footer">
+    <p>&copy; UI-Kitchen-Sink</p>
 </div>
