--- a/app/less/bootstrap-import.less
+++ b/app/less/bootstrap-import.less
@@ -1,4 +1,4 @@
-@bsbase: "../../libs/bootstrap/less/";
+@bsbase: "../../../libs/bootstrap/less/";
 
 // Core variables and mixins
 @import "@{bsbase}variables.less";    // original
