--- a/app/views/header.html
+++ b/app/views/header.html
@@ -10,7 +10,7 @@
                     <span class="icon-bar"></span>
                 </button>
                 <a class="il-navbar-logo" href="#/index.html">
-                    <img src="/app/img/HeaderIcon.svg" alt="Logo" class="noMirror">
+                    <img src="/app/static/img/HeaderIcon.svg" alt="Logo" class="noMirror">
                 </a>
                 <a class="navbar-brand" href="#/index.html">UI-Kitchen-Sink
                 </a>
