--- a/app/less/variables.less
+++ b/app/less/variables.less
@@ -936,10 +936,30 @@
 @il-explorer-top: @navbar-height+264px;
 @il-explorer-width: 650px;
 
+//== ILIAS Header
+//
+@il-header-height: 2 * @navbar-height + @navbar-margin-bottom;
+
 //== ILIAS Footer
 //
 @il-footer-bg: @navbar-inverse-bg;
 @il-footer-color: @navbar-inverse-color;
-@il-footer-height: 30px;
+@il-footer-height: 40px;
 @il-footer-padding-horizontal: @navbar-padding-horizontal;
 @il-footer-padding-vertical: @navbar-padding-vertical;
+
+//== ILIAS Fonts
+@web-font-path: "/app/static/fonts/";
+//== Typography
+@font-family-sans-serif:  'Open Sans', Verdana, Arial, Helvetica, sans-serif;
+
+@font-size-base:          14px;
+@font-size-large:         ceil((@font-size-base * 1.25));
+@font-size-small:         ceil((@font-size-base * 0.85));
+
+@font-size-h1:            floor((@font-size-base * 1.6));
+@font-size-h2:            floor((@font-size-base * 1.4));
+@font-size-h3:            ceil((@font-size-base * 1.3));
+@font-size-h4:            ceil((@font-size-base * 1.2));
+@font-size-h5:            ceil((@font-size-base * 1.1));
+@font-size-h6:            @font-size-base;
