New side navigation started

--- a/app/less/app/header.less
+++ b/app/less/app/header.less
@@ -1,8 +1,13 @@
-.il-main-header{
-  margin-top: @navbar-height;
-}
+
 .il-navbar-logo{
   float: left;
   margin-right: 15px;
   height:@navbar-height;
+}
+.il-logo-icon-stop2{
+  stop-color: @il-logo-color1;
+}
+
+.il-logo-icon-stop1{
+  stop-color: @il-logo-color2;
 }
