--- a/app/less/app/Content.less
+++ b/app/less/app/Content.less
@@ -1,3 +1,9 @@
-.il-content{
-  margin-top: @il-header-height;
+.il-content-container{
+  padding-left: 0;
+  padding-right: 0;
+}
+
+.il-center-content{
+    margin-left: 0;
+    margin-right: 0;
 }
